--- a/style.css
+++ b/style.css
@@ -48,7 +48,6 @@ nav ul li:hover {
     font-size: 1.5em;
 }
 
-/* Work */
 #work {
     background-color: #fff;
     padding: 50px;
@@ -59,37 +58,6 @@ nav ul li:hover {
     margin-bottom: 30px;
 }
 
-.project-tile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    margin: 30px 0;
-}
-
-.project-tile img {
-    width: 100%;
-    max-width: 600px;
-}
-
-.project-tile h3 {
-    font-size: 1.5em;
-    margin: 20px 0;
-}
-
-.project-tile a {
-    background-color: #333;
-    color: #fff;
-    padding: 10px 20px;
-    border-radius: 5px;
-    text-decoration: none;
-    transition: all 0.2s ease;
-}
-
-.project-tile a:hover {
-    background-color: #FDB813;
-    color: #333;
-}
 
 #contact {
     background-color: #333;
@@ -128,7 +96,6 @@ nav ul li:hover {
     color: #FDB813;
 }
 
-/* Footer styles */
 footer {
     background-color: #333;
     color: #fff;
@@ -138,4 +105,57 @@ footer {
 
 .footer p {
     font-size: 1.2em;
+}
+
+.card-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.card {
+    width: 30%;
+    margin-bottom: 20px;
+    background-color: #f4f4f4;
+    border-radius: 5px;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+    overflow: hidden;
+    transition: all 0.3s ease;
+}
+
+.card:hover {
+    transform: translateY(-5px);
+    box-shadow: 0 5px 10px rgba(0, 0, 0, 0.3);
+}
+
+.card-image {
+    width: 100%;
+    height: 200px;
+    overflow: hidden;
+}
+
+.card-image img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
+.card-content {
+    padding: 10px;
+    text-align: center;
+}
+
+.card-content h3 {
+    font-size: 1.5rem;
+    margin-bottom: 10px;
+}
+
+.card-content a {
+    display: inline-block;
+    padding: 8px 12px;
+    background-color: #333;
+    color: #fff;
+    border-radius: 5px;
+    text-decoration: none;
 }
